fixed spacing in html css

--- a/tei_mgg-html.css
+++ b/tei_mgg-html.css
@@ -7,7 +7,7 @@ div.rilm-nodename-div,
 div.rilm-nodename-p{
     clear: both;
     display: block;
-    margin: 10px 0 10px 0;
+    margin-bottom: 1.7em;
 }
 .rilm-p > img{
     height: 1em;
